# robai

./: .gitignore  Dockerfile  README.md  base.py  basebu.py  chains.py  chat.py  errors.py  full_example.py  in_out.py  languagemodels.py  llm.py  memory.py  pyproject.toml  readme-for-ai.md  readme.md  robai_documentation.md  robot_in.py  schemas.py  setup.py  tools.py  utility.py
examples/: README.md  building-robot.md  building_robots.py  chained_robots.py  debate_bots.py  full_example.py  memory.py  recipes.py  robai_example_guide.md  robot_registryWORKINPROGRESS.py  sample_robots.py  summary.py  summary2.py  weather.py
robai/: __init__.py  base.py  example.py  func_tools.py  protocols.py  schemas.py  utility.py
